<resources>
    <string name="app_name">SecureBox Recorder</string>
    <string name="exit_app">To exit, tap back again</string>

    <string name="voice_recording">Voice Recording</string>
    <string name="title">title</string>
    <string name="save">save</string>
    <string name="please_enter_name">please enter a name</string>
    <string name="cant_pause_stopped">can\'t pause! stopped!</string>
    <string name="cant_record_without_permission">can\'t record without permission</string>
    <string name="error_record_stop">can\'t stop recorder!</string>
    <string name="error_record_start">can\'t start record!</string>
    <string name="error_record_prepare">can\'t prepare recorder!</string>
    <string name="delete">delete</string>
    <string name="are_you_sure_you_want_to_delete_this_record">Are you sure you want to delete this record?</string>
    <string name="cant_find_file">Can\'t find file!</string>
    <string name="cancel">cancel</string>

    <string name="set_security_key_warning">Uppercase and lowercase letters are important</string>
    <string name="set_security_key_note1">Note1: by save audio name same as \"Security Key\", you can access to file manager.</string>
    <string name="set_security_key_note2">Note2: if you forget the \"Security Key\", you would can\'t access to data anymore!.</string>
    <string name="security_hint_example">example: Amir!%98M</string>
    <string name="security_key">Security Key</string>
    <string name="recovery_key">Recovery Key</string>
    <string name="restore_note">To restore old data, first enter the \"Last Security Key\", then tap on \"Restore Backup\" and locate backup file.</string>
    <string name="restore_backup">Restore Backup</string>
    <string name="restore_backup_success">Restore Backup success</string>
    <string name="restore_backup_error">Restore Backup error</string>
    <string name="restore_data">Restore Data</string>
    <string name="next">Next</string>
    <string name="input_is_empty">Text input is empty please fill text field</string>
    <string name="file_name">File name</string>

    <string name="invalid_pass_special_letter">one of signs ~ ! @ $ ^ _ |</string>
    <string name="invalid_pass_string">at least one lower-case and one upper-case letter</string>
    <string name="invalid_pass_numbers">at least one number</string>
    <string name="invalid_pass_long">at least 6 character</string>
    <string name="start_record">start Record</string>
    <string name="secure_box">Secure Box</string>
    <string name="exit">Exit</string>
    <string name="export">Export</string>
    <string name="share">Share</string>
    <string name="error_save_file">Error! can\'t save file</string>
    <string name="error_add_file">Error! can\'t add file</string>
    <string name="error_delete_file">Error! can\'t delete file</string>
    <string name="are_you_sure_you_want_to_delete_this_file">Are you sure you want to delete this file?</string>
    <string name="error_share_file">Error! can\'t share file</string>
    <string name="export_message">Your files is Exported ,Encrypted with your Key.</string>
    <string name="ok">OK</string>
    <string name="error_open_file">Error! can\'t open file</string>
    <string name="open_with_other_app">Can\'t open file, you can open it with other applications.</string>
    <string name="open">Open</string>
    <string name="dismiss">Dismiss</string>
    <string name="record_voice">Record voice</string>
    <string name="no_record_yet_try_round_button_at_bottom">No Record yet!\nTry Round Button at bottom</string>
    <string name="no_secured_files_yet_try_round_button_at_bottom">No secured files yet!\nTry Round Button at bottom</string>

</resources>