<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/margin">

        <com.google.android.material.textview.MaterialTextView
            style="@style/txt.h0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:drawablePadding="@dimen/padding"
            android:text="@string/set_security_key_note1"
            app:drawableStartCompat="@drawable/ic_round_info"
            app:drawableTint="?attr/colorError" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/txt.h0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:drawablePadding="@dimen/padding"
            android:text="@string/set_security_key_note2"
            app:drawableStartCompat="@drawable/ic_round_info"
            app:drawableTint="?attr/colorError" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/txt.h3.bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/security_key" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etSecurity"
            style="@style/input.outline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperText="@string/set_security_key_warning"
            app:hintTextAppearance="@style/txt.h2">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/security_hint_example"
                android:imeOptions="actionNext"
                android:lines="1"
                android:maxLines="1"
                android:padding="@dimen/padding"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            style="@style/txt.h3.bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/restore_data" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/txt.h1.medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/padding"
            android:justificationMode="inter_word"
            android:text="@string/restore_note"
            android:textAlignment="center"
            app:drawableStartCompat="@drawable/ic_warning"
            app:drawableTint="?attr/colorError" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRestore"
                style="@style/btn.colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="3"
                android:backgroundTint="?attr/colorError"
                android:text="@string/restore_backup"
                android:textColor="?attr/colorOnError"
                app:icon="@drawable/ic_round_restore" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvRestoreFileName"
                style="@style/txt.h1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:lines="2"
                android:maxLines="2"
                android:text="@string/file_name" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNext"
            style="@style/btn.colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/next"
            app:icon="@drawable/ic_arrow_forward" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>