<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:id="@+id/vHandler"
        android:layout_width="@dimen/handle_width"
        android:layout_height="2dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin"
        android:background="?android:attr/textColorHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/image_normal"
        android:layout_height="@dimen/image_normal"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/margin"
        app:srcCompat="@drawable/ic_package_box" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/txt.h2.medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin"
        android:layout_marginVertical="@dimen/padding"
        android:gravity="center"
        android:text="@string/export_message" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvAddress"
        style="@style/txt.h0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin"
        android:layout_marginVertical="@dimen/padding"
        android:gravity="center"
        tools:text="ADDRESS" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/margin"
        android:paddingBottom="@dimen/margin">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            style="@style/btn.outlined"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/padding"
            android:layout_weight="1"
            android:text="@string/ok" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnShare"
            style="@style/btn.colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/share"
            app:icon="@drawable/ic_send_file" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>